# pamba

./: .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
requests/: meta.yaml
src/pamba/: __init__.py  __main__.py  cli.py  env.py
tests/: test_pamba.py
